improvement of semantics

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -58,134 +58,134 @@
 
                         <div class="col-sm-6 col-md-4 ">
                             <a class="lightbox" href="../img/plytki1/zdj1.webp"></a>
-                            <img src="../img/plytki1/zdj1.webp" alt="zdjęcie 1" width="300px" height="450px">
+                            <img src="../img/plytki1/zdj1.webp" alt="zdjęcie 1" width="300" height="450">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki1/zdj2.webp"></a>
-                            <img src="../img/plytki1/zdj2.webp" alt="zdjęcie 2" width="300px" height="450px">
+                            <img src="../img/plytki1/zdj2.webp" alt="zdjęcie 2" width="300" height="450">
                             </a>
                         </div>
 
                         <div class="col-sm-6 col-md-4 col-lg-2">
                             <a class="lightbox" href="../img/plytki1/zdj3.webp"></a>
-                            <img src="../img/plytki1/zdj3.webp" alt="zdjęcie 3" width="300px" height="450px">
+                            <img src="../img/plytki1/zdj3.webp" alt="zdjęcie 3" width="300" height="450">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki1/zdj4.webp"></a>
-                            <img src="../img/plytki1/zdj4.webp" alt="zdjęcie 4" width="300px" height="300px">
+                            <img src="../img/plytki1/zdj4.webp" alt="zdjęcie 4" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki1/zdj5.webp"></a>
-                            <img src="../img/plytki1/zdj5.webp" alt="zdjęcie 5" width="300px" height="300px">
+                            <img src="../img/plytki1/zdj5.webp" alt="zdjęcie 5" width="300" height="300">
                             </a>
                         </div>
 
                         <!-- płytki 2 -->
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj10.webp"></a>
-                            <img src="../img/plytki2/zdj10.webp" alt="zdjęcie 6" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj10.webp" alt="zdjęcie 6" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj11.webp"></a>
-                            <img src="../img/plytki2/zdj11.webp" alt="zdjęcie 7" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj11.webp" alt="zdjęcie 7" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj12.webp"></a>
-                            <img src="../img/plytki2/zdj12.webp" alt="zdjęcie 8" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj12.webp" alt="zdjęcie 8" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj13.webp"></a>
-                            <img src="../img/plytki2/zdj13.webp" alt="zdjęcie 9" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj13.webp" alt="zdjęcie 9" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj14.webp"></a>
-                            <img src="../img/plytki2/zdj14.webp" alt="zdjęcie 10" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj14.webp" alt="zdjęcie 10" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj15.webp"></a>
-                            <img src="../img/plytki2/zdj15.webp" alt="zdjęcie 11" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj15.webp" alt="zdjęcie 11" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj16.webp"></a>
-                            <img src="../img/plytki2/zdj16.webp" alt="zdjęcie 12" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj16.webp" alt="zdjęcie 12" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj17.webp"></a>
-                            <img src="../img/plytki2/zdj17.webp" alt="zdjęcie 13" width="300px" height="300px">
+                            <img src="../img/plytki2/zdj17.webp" alt="zdjęcie 13" width="300" height="300">
                             </a>
                         </div>
 
                         <!-- płytki 3 -->
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj20.webp"></a>
-                            <img src="../img/plytki3/zdj20.webp" alt="zdjęcie 14" width="300px" height="300px">
+                            <img src="../img/plytki3/zdj20.webp" alt="zdjęcie 14" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj21.webp"></a>
-                            <img src="../img/plytki3/zdj21.webp" alt="zdjęcie 15" width="300px" height="300px">
+                            <img src="../img/plytki3/zdj21.webp" alt="zdjęcie 15" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj22.webp"></a>
-                            <img src="../img/plytki3/zdj22.webp" alt="zdjęcie 16" width="300px" height="450px">
+                            <img src="../img/plytki3/zdj22.webp" alt="zdjęcie 16" width="300" height="450">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj23.webp"></a>
-                            <img src="../img/plytki3/zdj23.webp" alt="zdjęcie 17" width="300px" height="300px">
+                            <img src="../img/plytki3/zdj23.webp" alt="zdjęcie 17" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj24.webp"></a>
-                            <img src="../img/plytki3/zdj24.webp" alt="zdjęcie 18" width="300px" height="300px">
+                            <img src="../img/plytki3/zdj24.webp" alt="zdjęcie 18" width="300" height="300">
                             </a>
                         </div>
 
                         <!-- płytki 4 -->
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj31.webp"></a>
-                            <img src="../img/plytki4/zdj31.webp" alt="zdjęcie 20" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj31.webp" alt="zdjęcie 20" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj32.webp"></a>
-                            <img src="../img/plytki4/zdj32.webp" alt="zdjęcie 21" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj32.webp" alt="zdjęcie 21" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj33.webp"></a>
-                            <img src="../img/plytki4/zdj33.webp" alt="zdjęcie 22" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj33.webp" alt="zdjęcie 22" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj34.webp"></a>
-                            <img src="../img/plytki4/zdj34.webp" alt="zdjęcie 23" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj34.webp" alt="zdjęcie 23" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj35.webp"></a>
-                            <img src="../img/plytki4/zdj35.webp" alt="zdjęcie 24" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj35.webp" alt="zdjęcie 24" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj36.webp"></a>
-                            <img src="../img/plytki4/zdj36.webp" alt="zdjęcie 25" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj36.webp" alt="zdjęcie 25" width="300" height="300">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj37.webp"></a>
-                            <img src="../img/plytki4/zdj37.webp" alt="zdjęcie 26" width="300px" height="300px">
+                            <img src="../img/plytki4/zdj37.webp" alt="zdjęcie 26" width="300" height="300">
                             </a>
                         </div>
                     </div>
