add footer to gallery

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -193,6 +193,17 @@
 
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__content">
+                <p class="footer__description">
+                    "Przez 20 lat pracy zawodowej, solidnością zdobyłem zaufanie swoich klientów, którzy do mnie
+                    wracają. Dobrze wykonana praca i zadowolenie z jej efektów jest tym, co cieszy mnie najbardziej."
+                </p>
+                <cite>Tomasz Kaleta</cite>
+            </div>
+            <small>&copy; Copyright by <a href="https://kamilmuzyka.pl" target="_blank">Kamil
+                    Muzyka</a> 2021</small>
+        </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
     <script src="../index.js"></script>
