changes in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a class="btn--welcome cta__btn--welcome" href="/public/services.html"></a>
                 </div>
             </section>
-            <section class="services">
+            <section class="services__tile">
                 <article class="tile tile--1">
                     <i class="circle fas fa-search-location"></i>
                     <h1 class="tile__title">analiza</h1>
