--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <div class="about">
                     <h5 class="about__me">Tomasz Kaleta</h5>
                     <h1 class="about__title">glazura, elektryka wykończenia</h1>
-                    <p class="about__descryption">Cześć ! Mam na imię Tomek, z wykształcenia jestem elektrykiem. Pracami
-                        budowlanymi zajmuję się od 20 lat. Moim głównym zajęciem jest układanie płytek, podłączanie
-                        elektryki oraz prace wykończeniowe wnętrz.</p>
+                    <p class="about__descryption">Cześć ! Mam na imię Tomek. Zajmuję się pracami
+                        budowlanymi od 15 lat. Moim głównym zajęciem jest układanie płytek oraz prace
+                        wykończeniowe wnętrz.</p>
                     <a class="btn--welcome cta__btn--welcome" href="/public/services.html"></a>
                 </div>
             </section>
