--- a/public/contact.html
+++ b/public/contact.html
@@ -58,8 +58,8 @@
                 <div class="tile tile--1">
                     <i class="circle fas fa-user-clock"></i>
                     <h2 class="tile__title">kontakt</h2>
-                    <p class="tile__description">Pon. - Sb.</p>
-                    <p class="tile__description tile__description--mod">7:00 - 19:00</p>
+                    <p class="tile__description">Pon. - Pt.</p>
+                    <p class="tile__description tile__description--mod">8:00 - 16:00</p>
                 </div>
             </article>
         </section>
