finish services section

--- a/public/services.html
+++ b/public/services.html
@@ -42,45 +42,38 @@
                 </ul>
             </nav>
         </header>
-        <section class="services__wrapper">
-            <h1 class="services__title">Sprawdź moje usługi</h1>
-            <article class="services__tile">
-                <h2 class="services__list__title">Usługi glazurnicze</h2>
-                <ul class="services__list">
-                    <li class="services__list__item">Układanie płytek wewnątrz oraz na zewnątrz</li>
-                    <li class="services__list__item">Układanie płytek wielkoformatowych</li>
-                    <li class="services__list__item">Kamień dekoracyjny</li>
-                </ul>
-            </article>
-            <article class="services__tile">
-                <h2 class="services__list__title">Łazienki</h2>
-                <ul class="services__list">
-                    <li class="services__list__item">Montaż brodzików, kabin prysznicowych, wannien
-                    </li>
-                    <li class="services_item">szafki, umywalki, wc</li>
-                </ul>
-            </article>
-
-            <article class="services__tile">
-                <h2 class="services__list__title">Inne</h2>
-                <ul class="services__list">
-                    <li class="services__list__item">Kuchnie </li>
-                    <li class="services__list__item">Salony</li>
-                    <li class="services__list__item">Tarasy</li>
-                    <li class="services__list__item">Balkony </li>
-                    <li class="services__list__item">Zabudowy</li>
-                </ul>
-            </article>
-            <article class="services__tile">
-                <h2 class="services__list__title">Zajmuję się także wykończeniami wnętrz mieszkań i domów</h2>
-                <ul class="services__list">
-                    <li class="services__list__item">Konstrukcje gipsowo kartonowe - sufity, ściany, zabudowy </li>
-                    <li class="services__list__item">Szpachlowanie</li>
-                    <li class="services__list__item">Malowanie</li>
-                    <li class="services__list__item">Montaż drzwi </li>
-                    <li class="services__list__item">Układanie paneli pdołogowych</li>
-                </ul>
-            </article>
+        <section class="services">
+            <div class="services__wrapper">
+                <h1 class="services__title">Sprawdź moje usługi</h1>
+                <article class="services__tile">
+                    <h2 class="services__list__title tile__title">Usługi glazurnicze</h2>
+                    <ul class="services__list">
+                        <li class="services__list__item">Układanie płytek wewnątrz oraz na zewnątrz</li>
+                        <li class="services__list__item">Układanie płytek wielkoformatowych</li>
+                        <li class="services__list__item">Kamień dekoracyjny</li>
+                    </ul>
+                </article>
+                <article class="services__tile">
+                    <h2 class="services__list__title tile__title">Łazienki</h2>
+                    <ul class="services__list">
+                        <li class="services__list__item">Montaż brodzików, kabin prysznicowych, wanien
+                        </li>
+                        <li class="services_item">Szafki, umywalki, WC</li>
+                    </ul>
+                </article>
+                <article class="services__tile">
+                    <h2 class="services__list__title tile__title">Zajmuję się także wykończeniami wnętrz mieszkań i
+                        domów</h2>
+                    <ul class="services__list">
+                        <li class="services__list__item">Konstrukcje kartonowo-gipsowe takie jak sufity, ściany,
+                            zabudowy </li>
+                        <li class="services__list__item">Szpachlowanie</li>
+                        <li class="services__list__item">Malowanie</li>
+                        <li class="services__list__item">Montaż drzwi </li>
+                        <li class="services__list__item">Układanie paneli podłogowych</li>
+                    </ul>
+                </article>
+            </div>
         </section>
     </div>
     <footer class="footer">
